--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=yourmuslab.db"
-  }
+  },
+  "ApiUrl": "https://localhost:5002/"
 }
