--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.18" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.31.0" />
     <PackageReference Include="MimeKit" Version="4.1.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.116" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
   </ItemGroup>
 
